--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
         <title>My awesome web page</title>
     </head>
 
-  <body>
+  <body><html>
+
+    <body><html>
+
+    <body>
+
+        The HTML content goes here.
+
+    </body>
+
+</html>
     Hello there, awesome person! 
   </body>
 
