--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
         <title>My awesome web page</title>
     </head>
 
-  <body><html>
 
-    <body><html>
-
-    <body>
+    <body> 
+<h1>header</h1>
 
         The HTML content goes here.
 
