--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <body> 
 <h1>header</h1>
+        <img src="https://octodex.github.com/images/vinyltocat.png
 
         The HTML content goes here.
 
