--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
     <body> 
 <h1>header</h1>
-        <img src=https://avatars.githubusercontent.com/u/85236948?v=4
+        <img src="https://avatars.githubusercontent.com/u/85236948?v=4"
 
         The HTML content goes here.
 
     </body>
 
-</html>
+
     Hello there, awesome person! 
   </body>
 
