--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <body> 
 <h1>header</h1>
-        <img src="https://avatars.githubusercontent.com/u/85236948?v=4"
+        <img src="https://octodex.github.com/images/vinyltocat.png">
+
 
         The HTML content goes here.
 
