--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
         The HTML content goes here.
 
-    </body>
+    <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
 
 
     Hello there, awesome person! 
