--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li>Ordered list</li>
 </ol>
 
+<li><a href="https://github.com">This is a link to GitHub!</a></li>
 
     Hello there, awesome person! 
   </body>
